[package]
name = "lab5-pis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "~1.44", features = ["full"] }
axum = "~0.8"
reqwest = { version = "~0.12", features = ["json"] }
serde = { version = "~1.0", features = ["derive"] }
build_html = "~2.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
